2000-02-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/base/bode.m: Temporarily disable automatic_replot.

2000-02-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (clean): Also remove gethelp.

	* specfun/erfinv.m: Use z_new in convergence test, not z_old.

2000-02-11  Georg Thimm <mgeorg@SGraphicsWS1.mpe.ntu.edu.sg>

	* set/create_set.m: Use find to avoid while loop.

2000-02-11  Stephen Eglen <stephen@cogsci.ed.ac.uk>

	* plot/hist.m: New optional third argument.

2000-02-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/bug_report.m: Use octave-bug script with version
	number appended.

2000-02-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* gethelp.cc: Sprinkle with std:: qualifier.

2000-01-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/saveimage.m: Delete some debugging code.

2000-01-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* signal/sinc.m: Avoid reshaping.

	* image/rgb2ind.m: No longer needs to reset do_fortran_indexing.
	* image/ind2rgb.m: Ditto.
	* image/ind2gray.m: Ditto.
	* general/reshape.m: Ditto.  Also no longer needs to reset
	implicit_str_to_num_ok.

2000-01-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/popen2.m: Deal with the fact that pipe now returns
	a list of file structures, not a vector of numeric file ids.

2000-01-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/__axis_label__.m: New function.
	Undo string escapes in text twice(!) before sending to gnuplot.
	* plot/xlabel.m: Use it.
	* plot/ylabel.m: Ditto.
	* plot/zlabel.m: Ditto.

	* plot/mesh.m: Fix error message to reflect reality.

2000-01-24  Cyril Humbert <humbert@phobos.univ-mlv.fr>

	* statistics/distributions/weibull_pdf.m: Use correct formula.

2000-01-22  Michael Reifenberger <mike@Plaut.de>

	* audio/saveaudio.m: Also accept files with .ul extension.
	* audio/loadaudio.m: Ditto.
	* audio/playaudio.m: Ditto.

2000-01-19  John W. Eaton  <jwe@bevo.che.wisc.edu>
