@@ -1,3 +1,8 @@
+2000-03-06  Stephen Eglen  <stephen@anc.ed.ac.uk>
+
+	* statistics/tests/kolmogorov_smirnov_test_2.m: Account for ties
+	between the two distributions (took same approach as ks.test() in R.)
+
 2000-02-29  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* control/base/bode.m: Temporarily disable automatic_replot.
